[package]
name = "phosphor"
version = "0.1.0"
authors = ["lm9 <depkey@me.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
diesel  = { version = "1.4.2", features = ["sqlite", "r2d2", "mysql", "chrono"] }
rocket_contrib = { version = "0.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
serde_derive = "1.0"
chrono = { version = "0.4.6", features = ["serde"] }
rust-argon2 = "0.4.0"
yyid = "0.2.4"
